[package]
name = "oc_user"
version = "0.1.0"
edition = "2021"

[lib]
name = "oc_user"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
once_cell = "1.21.3"
pyo3 = { version = "0.24.2", features = ["extension-module"] }
numpy = "0.24.0"
tokio = { version = "1.45.0", features = ["full"] }
route_websocket_client = { path = "../route_websocket_client"}
public = { path="../public"}
thread_manager = { path = "../thread_manager"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
