[package]
name = "route_websocket_client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
public = { path = "../public"}

